css corrections in bus web and mlite, and train checkout page alignment

--- a/src/app/train/trains-traveller/travellers.component.scss
+++ b/src/app/train/trains-traveller/travellers.component.scss
@@ -202,6 +202,9 @@
         flex: 0 0 50px; */
         /* text-align: left; */
     }
+    .trainTimeInfo_div{
+        width:33%;
+    }
     .time, .day{
         font-size: 16px;
         font-family: 'opensans-bold';
@@ -221,6 +224,9 @@
         margin: 0 auto;
         width: 100%;
         position: relative;
+        div{
+            flex-basis:33.3%;
+        }
         .dur_time{
             color: #888888;
             font-size: 12px;
@@ -230,8 +236,8 @@
         .range{
             border-top: 1px solid #E6E6E6;
             position: relative;
-            margin: 5px 0;
-            width: 200px;
+            margin: 5px 5px;
+            width: 130px;
             &::before{
                 border-radius: 50%;
                 background: #888888;
@@ -785,7 +791,7 @@ font-size:12px;
         margin-bottom:0.5rem;
     }
     .fixed-top{
-        z-index:1;
+        z-index:5;
     }
     ::ng-deep .mat-dialog-container{
         padding:10px;
